--- a/assets/style.css
+++ b/assets/style.css
@@ -268,3 +268,35 @@ p {
 .slide.active {
     display: block;
 }
+
+#services{
+    margin:auto;
+    background-color:#A8D5D8;
+    position:relative;
+}
+#services .container::before{
+    content:' ';
+    background-color:#1C6474;
+    position:absolute;
+    width:100%;
+    height:30%;
+    bottom:0;
+    left:0;
+    z-index:0;
+}
+#services .container{
+    justify-content:space-between;
+    display:flex;
+    padding: 2em;
+}
+.service{
+    background-color:#fff;
+    max-width: 250px;
+    width:30%;
+    height:337px;
+    padding:1em;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    z-index:1;
+}
