--- a/assets/style.css
+++ b/assets/style.css
@@ -269,6 +269,7 @@ p {
     display: block;
 }
 
+/* services */
 #services{
     margin:auto;
     background-color:#A8D5D8;
@@ -300,3 +301,94 @@ p {
     justify-content:space-between;
     z-index:1;
 }
+
+/* footer */
+
+#contact{
+    margin:auto;
+    background-color:#D8D3A8;
+    position:relative;
+    padding-inline:100px;
+    padding-block:100px;
+    margin-top:35px;
+
+}
+#contact .container{
+    display:flex;
+}
+.picture.right::before{
+    content:' ';
+    background-color:#BEB45A;
+    width:374px;
+    height:329px;
+    position:absolute;
+    bottom:0;
+    right:0;
+    z-index:-1;
+}
+
+.form-container{
+    flex:2;
+}
+form{
+    display:flex;
+    flex-direction:column;
+    width:70%;
+    align-items:flex-start;
+}
+form input{
+    width:100%;
+    background-color:transparent;
+    border:solid 1px;
+    height:2.5em;
+    margin-bottom:20px;
+}
+form textarea{
+    width:100%;
+    background-color:transparent;
+    border:solid 1px;
+    height:5em;
+    line-height:2.5em;
+    font-size:1.2em;
+    margin-bottom:20px;
+}
+input[type="submit"]{
+    background-color:#BEB45A;
+    padding:.5em 1em;
+}
+    @media all and (max-width:1180px){
+        .picture{flex:2}
+        #about,#contact .container{align-items:center}
+        .about-me__title{margin-top:0;margin-bottom:1em}
+        #about-me h6,#about-me p{width:100%}
+    }
+
+    @media all and (max-width:1000px){
+        #about{flex-direction:column}
+        .picture{width:50%}
+        .picture.left::before{width:100%;height:30%;position:absolute;bottom:auto;top:0;left:0;z-index:-1}
+        .about-me__title{text-align:center;margin-top:1em}
+        #services .container{flex-direction:column}
+        .service{width:100%;max-width:100%;height:auto;margin:2em 0}
+        .service__description{margin-bottom:1em}
+        #services .container::before{width:30%;height:100%;bottom:0;right:0;left:auto;z-index:0}
+        #contact .container{flex-direction:column}
+        #contact .picture.right{margin-top:1em}
+        .picture.right::before{width:100%;height:30%;position:absolute;bottom:0;right:0;z-index:-1}
+    }
+
+    @media all and (max-width:650px){
+        .top-header{flex-direction:column;padding-inline:0}
+        .top-header .nav,.top-header .nav ul{width:100%;padding:0 0 0 0}
+        .top-header .nav li{flex:1;padding-block:1em;text-align:center}
+        .picture.left::before,.picture.right::before{height:150px}
+        #services .container{align-items:center}
+        .service{max-width:90%}
+        #about,#contact{padding-inline:2em;padding-block:2em}
+        form{width:100%}
+        .picture{width:80%}
+        .image-size{width:100%}
+    }
+
+
+
