--- a/assets/style.css
+++ b/assets/style.css
@@ -88,31 +88,6 @@ a{
     padding: 0.5rem;
     margin-bottom: 2rem;
 }
-footer {
-	background-color: #28363D;
-	color: white;
-	display: flex;
-	padding-block: 3em;
-	justify-content: space-evenly;
-	font-size: 12px;
-	align-items: center;
-    margin-top: 3rem;
-}
-footer div {
-
-	position: relative;
-}
-.footer-logo {
-	background-color: white;
-	max-width: 308px;
-	padding: 10px;
-}
-.footer-contact {
-	margin-bottom: 1em;
-	font-weight: 700;
-	font-size: 16px;
-
-}
 
 /* les visites */
 .restaurants {
@@ -391,6 +366,11 @@ input[type="submit"]{
         form{width:100%}
         .picture{width:80%}
         .image-size{width:100%}
+        .directionRow {
+                       display: flex;
+                       flex-direction: row;
+                       justify-content: center;
+                    }
     }
 
 
