--- a/assets/style.css
+++ b/assets/style.css
@@ -7,10 +7,19 @@ header{
     align-items: center;
     background-color: mediumturquoise;
 }
-.fa {
-    font-size: 22px;
-    vertical-align: middle;
+.fa-square-instagram {
+    color: #ed72fd; 
+    font-family: Font Awesome 5 Brands; 
+    font-weight: 400;
 }
+.fa-brands{
+    display: inline-block;
+    font: 14px / 1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing:antialiased;
+}
+
 body{
    margin: 0%;
 }
