--- a/assets/style.css
+++ b/assets/style.css
@@ -47,7 +47,7 @@ h5{
   color: orangered; 
   font-size: 29px;
   font-style: italic;
-  margin-top: 254px;
+  margin-top: 86px;
 }
 h4{ 
     text-align: center;
@@ -171,7 +171,26 @@ a{
 
 
 /* equipe */
+.marcher{
+    display: flex;
+    width: 100%;
+    height: px;
+}
+.imgfor{
+    display: flex;
+    width: 100%;
+    height: 144px;
+    flex-direction: row;
+    justify-content: center;
+}
 
+@media screen and (max-width : 665px){
+ .marcher {
+    display: grid;
+    gap: 50px 98px;
+    padding: 25px 0 0 0;
+ }
+}
 .taill img{
     display: flex;
     width: 40px;
@@ -245,6 +264,7 @@ p {
     position: relative;
     width: 100%;
     overflow: hidden;
+    object-fit: cover;
 }
   
 .slide {
@@ -258,12 +278,15 @@ p {
 }
 
 .slide img {
+   display: block;
    width: 100%;
-   height: 100%;    
+   height: 100%; 
+   object-fit: cover; 
 }
   
 .slide.active {
     display: block;
+    object-fit: cover;
 }
 
 /* services */
