--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,9 @@ header{
     justify-content: space-between;
     padding: 0;
     align-items: center;
-    background-color: mediumturquoise;
+    background-image: url("./images/slideshow/plagepp.jpg");
+    background-size: cover;
+    background-position: center;
 }
 .fa-square-instagram {
     color: #ed72fd; 
@@ -67,12 +69,12 @@ a{
     display: flex;
     text-decoration: none;
     margin-right: 10px;
-    color: black;
+    color: white;
 }
 .deadbars{
     text-decoration: none;
     margin-left: 10px;
-    color: black;
+    color: white;
 }
 .deadbar:hover{
     border-top: 2px solid blue;
@@ -112,6 +114,12 @@ a{
     padding: 25px 0 0 0;
 }
 
+.cardsl {
+    display: grid;
+    gap: 30px 30px;
+    padding: 25px 0 4 0;
+}
+
 .card {
     background-color: #fff;
     -webkit-box-shadow: 0px 4px 8px 5px rgba(0,0,0,.07);
@@ -125,6 +133,13 @@ a{
     width: 100%;
     height: 173px;
     object-fit: cover;
+}
+
+.cardImagel img{  
+    width: 100%;
+    height: 173px;
+    object-fit: cover;
+    border-radius: 0.5rem;
 }
 
 .card__footer {
@@ -156,6 +171,18 @@ a{
  }
  .cardImage img {
     height: 258px;
+ }
+
+ .cardImagel img {
+    height: 258px;
+ }
+
+ .cardsl {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px 30px;
+    padding: 25px 0 4 0;
  }
 }
 
@@ -210,6 +237,16 @@ a{
     flex-direction: row;
     justify-content: center;
 }
+
+.hero {
+  width: 100%;
+  height: 400px;
+  background-image: url("./images/slideshow/ileau.jfif");
+  background-size: cover;
+  background-position: center;
+ 
+}
+
 @media screen and (max-width : 665px){
  .directionRow {
     display: grid;
