--- a/assets/style.css
+++ b/assets/style.css
@@ -117,7 +117,7 @@ a{
 .cardsl {
     display: grid;
     gap: 30px 30px;
-    padding: 25px 0 4 0;
+    padding: 1rem;
 }
 
 .card {
@@ -182,7 +182,7 @@ a{
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 30px 30px;
-    padding: 25px 0 4 0;
+    padding: 1rem;
  }
 }
 
